force-app/main/default/objects/Manager__c/Manager__c.object-meta.xml
<CustomObject>
    <description>Object to store manager details.</description>
    <label>Manager</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>