force-app/main/default/objects/Manager__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Field to store manager&apos;s email.</description>
    <inlineHelpText>Field to store manager&apos;s email.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>