force-app/main/default/objects/Manager__c/fields/Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Last_Name__c</fullName>
    <description>Field to store manager&apos;s last name.</description>
    <inlineHelpText>Field to store manager&apos;s last name.</inlineHelpText>
    <label>Last Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>