force-app/main/default/objects/Manager__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Field to store manager&apos;s user details.</description>
    <inlineHelpText>Field to store manager&apos;s user details.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Managers</relationshipName>
    <type>Lookup</type>
</CustomField>